<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/prescription_details_page"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".PrescriptionDetails"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/prescrption_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/check_prescription_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/remaining_inhaler_uses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text=""
        android:textStyle="bold"
        android:textSize="22sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remaining_inhaler_uses_display_text" />


    <TextView
        android:id="@+id/new_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/new_prescription_information_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescription_expiration_date" />

    <EditText
        android:id="@+id/new_prescription_number_of_uses_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/no_of_uses_prescription_hint"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_information" />

    <Button
        android:id="@+id/save_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/pacific_blue2"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/save_button_text"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_prescription_dosage_interval_input"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/new_prescription_expiry_date_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/expiry_date_prescription_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_prescription_number_of_uses_input" />

    <EditText
        android:id="@+id/new_prescription_dosage_interval_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/dosage_interval_prescription_hint"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_prescription_expiry_date_input" />

    <TextView
        android:id="@+id/remaining_inhaler_uses_display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/remaining_inhaler_uses_display_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescrption_details_title" />

    <TextView
        android:id="@+id/prescription_expiration_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text=""
        android:textStyle="bold"
        android:textSize="22sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prescription_expiration_date_display_text" />

    <TextView
        android:id="@+id/prescription_expiration_date_display_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/prescription_expiry_date_display_text"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remaining_inhaler_uses" />


    <!--    <Button-->
    <!--        android:id="@+id/apply_text_button"-->
    <!--        android:layout_width="250dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="500dp"-->
    <!--        android:backgroundTint="#68BBE3"-->
    <!--        android:layout_centerHorizontal="true"-->
    <!--        android:text="Apply Prescription"-->
    <!--        android:textColor="@android:color/background_light" />-->

</androidx.constraintlayout.widget.ConstraintLayout>

